--- a/source/sass/main/variables.scss
+++ b/source/sass/main/variables.scss
@@ -5,3 +5,10 @@ $dark-2: #222222;
 $dark-3: #111111;
 $green-1: #63a73a; // фон блоков
 $green-2: #68b738; // кнопка
+
+$screen-tablet: 768px;
+$screen-desktop: 1200px;
+
+$indents-mobile: 20px;
+$indents-tablet: 30px;
+$indents-desktop: 110px;
