--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,11 +1,14 @@
 .contacts {
   padding-top: 30px;
   padding-bottom: 25px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .contacts__title {
   padding: 0;
   margin: 0;
+  width: 125px;
 
   @include font(16, 1.25);
   color: $dark-3;
@@ -14,6 +17,17 @@
 .contacts__text {
   padding: 0;
   margin: 0;
+  width: 135px;
   line-height: 1.43;
   font-family: "Arial", sans-serif;
+}
+
+@media (min-width: $screen-desktop) {
+  .contacts {
+    position: absolute;
+    z-index: 1;
+    background-color: #ffffff;
+    width: 570px;
+    height: 201px;
+  }
 }
