--- a/source/sass/blocks/illustration.scss
+++ b/source/sass/blocks/illustration.scss
@@ -2,6 +2,7 @@
   background-color: $grey-1;
 }
 
+
 .illustration__title {
   line-height: 1.67;
   margin-bottom: 30px;
@@ -15,4 +16,39 @@
   line-height: 1.43;
   text-transform: uppercase;
   color: $dark-3;
+}
+
+@media (min-width: $screen-tablet) {
+  .illustration__slider {
+    height: 630px;
+    background-image: linear-gradient(#ffffff 33%, $grey-1 33%);
+  }
+
+  .illustration__wrapper {
+    height: 420px;
+    background-color: #ffffff;
+  }
+
+  .illustration {
+    background-color: #ffffff;
+  }
+}
+
+@media (min-width: $screen-desktop) {
+  .illustration {
+    display: flex;
+  }
+
+  .illustration__wrapper {
+    min-width: 610px;
+    height: 652px;
+    background-image: linear-gradient(#ffffff 33%, $grey-1 33%);
+  }
+
+  .illustration__slider {
+    min-width: 610px;
+    height: 652px;
+    background-color: #ffffff;
+    background-image: linear-gradient(#ffffff 33%, $grey-1 33%);
+  }
 }
