--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -6,13 +6,8 @@
 
   @include font(36, 1.67);
 
-  &--white {
-    padding: 10px 0;
-    line-height: 1;
-    color: #ffffff;
-  }
-
   &--stripe {
     @include font(24, 1);
+    text-align: left;
   }
 }
