--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,8 +6,8 @@
 @import "blocks/main";
 @import "blocks/navigation";
 @import "blocks/title";
-@import "blocks/basic";
 @import "blocks/button";
+@import "blocks/basic";
 @import "blocks/programs";
 @import "blocks/function";
 @import "blocks/illustration";
@@ -18,4 +18,6 @@
 @import "blocks/footer";
 @import "blocks/social";
 @import "blocks/catalog";
+@import "blocks/additional";
 @import "blocks/form";
+@import "blocks/outline";
