--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -70,9 +70,9 @@
     padding: 15px 0;
   }
 
-  .additional__title {
-    width: 100%;
-  }
+  // .additional__title {
+  //   width: 100%;
+  // }
 
   .additional__list {
     width: 70%;
