--- a/source/sass/blocks/outline.scss
+++ b/source/sass/blocks/outline.scss
@@ -5,6 +5,14 @@
 .illustration__wrapper,
 .illustration__slider,
 .contacts,
+.map,
 .footer {
   box-shadow: inset 0 0 0 2px black;
+}
+
+.form,
+.form__list--checkbox,
+.form__wrapper {
+  box-shadow: inset 0 0 0 2px red;
+  // background-color: rgba(255, 0, 0, 0.2);
 }
