--- a/source/sass/blocks/basic.scss
+++ b/source/sass/blocks/basic.scss
@@ -1,9 +1,8 @@
 .basic {
-  // padding: 30px 20px 0;
-  min-height: 305px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  min-height: 305px;
 }
 
 .basic__slogan {
@@ -23,9 +22,7 @@
 @media (max-width: $screen-tablet) { // <- 768
   .basic {
     height: 480px;
-
-    @include b-image(transparent, "index-background-mob1ile@1x.jpg");
-    background-image: linear-gradient(to top, transparent 0%, transparent 30%, $green-1 30%, $green-1 100%);
+    background-image: $top-gradient;
   }
 
   .basic__title {
@@ -45,6 +42,11 @@
     height: 700px;
     justify-content: flex-start;
     align-items: flex-start;
+  }
+
+  .basic__title {
+    align-self: flex-start;
+    width: 450px;
   }
 
   .basic__button {
