--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,3 +1,7 @@
+.form__wrapper {
+  @include font(16, 1.13);
+}
+
 .form__text {
   margin: 0;
   text-transform: uppercase;
@@ -5,24 +9,24 @@
 }
 
 .form__label {
-  margin-bottom: 15px;
   display: flex;
   align-items: baseline;
+  margin-bottom: 15px;
   text-transform: uppercase;
   color: $dark-2;
 }
 
 .form__input {
   flex-grow: 1;
-  font: inherit;
   padding: 12px 16px;
+  font: inherit;
   text-transform: uppercase;
 }
 
 .form__textarea {
-  padding: 13px;
   width: 100%;
   height: 150px;
+  padding: 13px;
   font: inherit;
   text-transform: uppercase;
 }
@@ -52,6 +56,10 @@
     padding: 0 $indents-tablet + 10px;
   }
 
+  .form__wrapper {
+    @include font(20, 1);
+  }
+
   .form__list {
     &--program {
       margin: 0;
@@ -61,10 +69,7 @@
 
     &--checkbox {
       display: flex;
-      // justify-content: space-between;
-      // align-items: baseline;
       flex-wrap: wrap;
-      // width: 540px;
     }
   }
 
@@ -74,6 +79,10 @@
 
   .form__item {
     padding: 0 50px;
+  }
+
+  .form__text {
+    @include font(20, 1.5);
   }
 }
 
