--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -2,5 +2,5 @@
   position: relative;
   min-height: 362px;
 
-  @include b-image(#f7f7f7, "bg-map-mobile@1x.png");
+  @include b-image("bg-map-mobile@1x.png", #fef7ef);
 }
