--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,9 +1,14 @@
-.form__wrapper {
+.form__form {
   @include font(16, 1.13);
 }
 
 .form__text {
   margin: 0;
+  margin-bottom: 40px;
+  padding-left: $padding-mobile;
+  padding-right: $padding-mobile;
+
+  @include font(14, 1.2);
   text-transform: uppercase;
   color: $dark-3;
 }
@@ -11,16 +16,43 @@
 .form__label {
   display: flex;
   align-items: baseline;
-  margin-bottom: 15px;
+  margin-bottom: 12px;
   text-transform: uppercase;
   color: $dark-2;
 }
 
 .form__input {
   flex-grow: 1;
+  min-width: 130px;
   padding: 12px 16px;
+  margin-left: 13px;
   font: inherit;
   text-transform: uppercase;
+}
+
+.form__radio {
+  display: flex;
+  align-items: center;
+}
+
+.form__radio::before {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 30px;
+  margin-right: 15px;
+  padding: 8px;
+  background-clip: content-box;
+  border: 1px solid #ebebeb;
+  border-radius: 50%;
+}
+
+input:checked + .form__radio::before {
+  background-color: $green-2;
+}
+
+input:focus + .form__radio::before {
+  border: 1px solid $grey-4;
 }
 
 .form__textarea {
@@ -33,29 +65,58 @@
 
 .form__list {
   margin: 0;
-  padding: 0;
+  margin-bottom: 24px;
   list-style: none;
 
+  &--cat-data {
+    padding: 0;
+    padding-left: $padding-mobile;
+    padding-right: $padding-mobile;
+  }
+
   &--program {
-    margin-left: -$indents-mobile;
-    margin-right: -$indents-mobile;
-    padding: 0 $indents-mobile;
-    border-top: 1px solid #ededed;
-    border-bottom: 1px solid #ededed;
+    margin-bottom: 24px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border: 1px solid $grey-3;
+  }
+
+  &--program .form__label {
+    margin-bottom: 13px;
+  }
+
+  &--checkbox {
+    padding: 0;
   }
 }
 
 .form__title {
   margin: 0;
-  margin-bottom: 30px;
+  padding-top: 16px;
+  padding-bottom: 25px;
+  padding-right: 0;
+  padding-left: 20px;
   text-align: left;
+  letter-spacing: -1px;
+}
+
+.form__wrapper {
+  &--owner-data {
+    margin-top: 7px;
+    padding-left: $padding-mobile;
+    padding-right: $padding-mobile;
+
+    .form__input {
+      margin-left: 8px;
+    }
+  }
+}
+
+.form__item:last-of-type .form__label {
+  margin-bottom: 0;
 }
 
 @media (min-width: $screen-tablet) {
-  .form__form {
-    padding: 0 $indents-tablet + 10px;
-  }
-
   .form__wrapper {
     @include font(20, 1);
   }
@@ -74,7 +135,9 @@
   }
 
   .form__button {
-    width: 283px;
+    width: auto;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 
   .form__item {
@@ -86,23 +149,38 @@
   }
 }
 
+
 @media (min-width: $screen-desktop) {
-  .form__form {
+  .form__list {
+    &--program {
+      display: inline-block;
+      vertical-align: middle;
+      width: 40%;
+      padding: 25px;
+    }
+
+    &--cat-data {
+      display: inline-block;
+      vertical-align: middle;
+      width: 50%;
+      margin: 0;
+      margin-right: 75px;
+    }
+  }
+
+  .form__item {
     padding: 0;
   }
 
-  .form__wrapper {
+  .form__wrapper--owner-data {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-  }
 
-  .form__list--сat-data {
-    min-width: 400px;
-  }
+    .form__label {
+      width: 50%;
 
-  .form__list--program {
-    min-width: 400px;
+      &:not(:last-child) {
+        margin-right: 75px;
+      }
+    }
   }
 }
