--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -1,3 +1,12 @@
+.navigation__toggle {
+  display: none;
+}
+
+.navigation__logo {
+  display: block;
+  padding: 11px 0;
+  border-bottom: 1px solid $grey-2;
+}
 
 .navigation__list {
   margin: 0;
@@ -6,7 +15,7 @@
 }
 
 .navigation__item {
-  padding: 22px 20px;
+  padding: 24px 20px 20px;
   text-align: center;
   color: $dark-3;
   border-bottom: 1px solid $grey-2;
@@ -16,21 +25,42 @@
   @include font(20, 1, 500);
   text-transform: uppercase;
 }
-
+//-------------------------------------------------------
 @media (min-width: $screen-tablet) {
   .navigation {
     display: flex;
     justify-content: space-between;
-    min-width: 768px;
+    padding: 22px $padding-tablet;
+  }
+
+  .navigation__logo {
+    padding: 0;
+    border: 0;
   }
 
   .navigation__list {
     display: flex;
   }
 
+  .navigation__item {
+    padding: 0;
+    border: 0;
+
+    &:not(:last-of-type) {
+      margin-right: 35px;
+    }
+  }
+
   .navigation__link {
+    display: block;
+    padding: 7px 0;
+
     @include font(18, 1.39);
     color: $dark-2;
+
+    &:not([href]) {
+      border-bottom: 2px solid $green-2;
+    }
   }
 }
 
@@ -39,6 +69,10 @@
     &--white {
       .navigation__link {
         color: #ffffff;
+
+        &:not([href]) {
+          border-bottom: 2px solid #ffffff;
+        }
       }
     }
   }
