--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -5,6 +5,13 @@
 }
 
 .slider__control {
+  display: flex;
+  justify-content: center;
   margin: 0;
+  margin-bottom: 20px;
   padding: 0;
+}
+
+.slider__image-wrap {
+  margin-bottom: 25px;
 }
