--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -1,18 +1,25 @@
 .title {
-  // align-self: center;
   margin: 0;
-  padding: 20px 0;
   color: $dark-3;
-  text-align: center;
-
 
   @include font(36, 1.67);
 
   &--stripe {
-    width: 100%;
+    display: flex;
 
     @include font(24, 1);
     text-align: left;
+
+    &::after {
+      content: "";
+      align-self: center;
+      flex-grow: 1;
+      // margin-top: 15px;
+      margin-left: 5px;
+      width: 10px;
+      height: 3px;
+      background-color: $green-2;
+    }
   }
 }
 
