--- a/source/sass/blocks/wrapper.scss
+++ b/source/sass/blocks/wrapper.scss
@@ -1,11 +1,11 @@
 .wrapper {
-  padding: 0 $indents-mobile;
+  padding: 0 20px;
 
   @media (min-width: $screen-tablet) {
-    padding: 0 $indents-tablet;
+    padding: 0 30px;
   }
 
   @media (min-width: $screen-desktop) {
-    padding: 0 $indents-desktop;
+    padding: 0 40px;
   }
 }
