Подгоняет под ПП

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -4,6 +4,7 @@
   padding: 11px;
   font: inherit;
   color: #ffffff;
+  letter-spacing: -0.4px;
   text-align: center;
   text-transform: uppercase;
   background-color: $green-2;
