--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,6 +1,5 @@
 .contacts {
   display: flex;
-  justify-content: space-between;
   padding-top: 27px;
   padding-bottom: 25px;
 
@@ -13,10 +12,12 @@
   width: 125px;
   padding: 0;
   margin: 0;
+  margin-right: 15px;
 
   @include font(16, 1.25);
   color: $dark-3;
   text-transform: uppercase;
+  letter-spacing: -0.4px;
 }
 
 .contacts__text {
