--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,17 +1,47 @@
+.slider {
+
+}
+.slider__control {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 210px;
+  margin: 0 auto;
+  padding: 0;
+}
+
 .slider__text {
   @include font(16, 1.25);
   color: $dark-3;
   text-transform: uppercase;
+  &:first-of-type {
+    margin-right: 19px;
+  }
 }
 
-.slider__control {
-  display: flex;
-  justify-content: center;
-  margin: 0;
-  margin-bottom: 20px;
-  padding: 0;
+.slider__toggler {
+  width: 85px;
+  height: 13px;
+  margin-right: 19px;
+  background-color: #ffffff;
+  border: 1px solid #cdcdcd;
+  border-radius: 15px;
+}
+
+
+
+.slider__button {
+  position: absolute;
+  top: 7px;
+  left: 33%;
+  width: 36px;
+  height: 6px;
+  background-color: $green-2;
+  border-radius: 15px;
+
 }
 
 .slider__image-wrap {
-  margin-bottom: 25px;
+  margin-bottom: 27px;
 }
